@@ -1,5 +1,5 @@
 #source: arch-err-5.s
-#as: --march=v0_v10
+#as: --march=v0_v10 --em=criself
 #objdump: -p
 
 #...
