@@ -1,5 +1,5 @@
 #objdump: -dr
-#as: --march=v32
+#as: --march=v32 --em=criself
 #source: v32-err-8.s
 
 # Check that USP gets the right number for V32.
